# ecom

./: .editorconfig  .ghci  .gitignore  README.md  devel.hs  ecom.cabal
app/: Main.hs
config/: keter.yaml  routes  settings.yml
deploy/: Procfile
doc/: Makefile  ecom.tex  header.tex  index.ist
doc/UserManual/: UserManual.docx  ~$erManual.docx
doc/chapters/: algorithmen.tex  aufgabenbeschreibung.tex  benutzung.tex  bib.tex  datenmodell.tex  entwicklungsumgebung.tex  titelseite.tex
exports/assocs/: 2de04b28-f93e-5254-b696-7129420bf659.json  2ea4d490-2dbc-5289-a5b1-b522ea24ba11.json  Lederrüstung.json  Leichte Rüstung.json  Leichte Rüstung.json  d1dce625-b583-54a5-b8bf-15cd3a118935.json
exports/products/: 0322500d-b429-50a9-ac41-435a3d1696cc.json  19c8e026-1814-5816-9611-c72d4305b243.json  3509a7b2-e784-5893-ae0f-c926a193f1c8.json  38efd2e4-f44d-5319-afd6-62dddf363874.json  4d6031a5-d02d-5803-9d34-83a8ec337b0f.json  4e4d2bf5-88ff-5822-9049-a220ba254f41.json  5b49a0d7-a2ec-51ee-81f9-82c2501030e3.json  6215c3d6-79d9-5680-887d-f5dbfe877a37.json  63cf6710-5f21-52a0-99fd-1da3822f08d1.json  70389215-f840-56fc-9f34-35ab8a56cdf9.json  72f66dab-019e-5f89-9181-3bbafb1e070a.json  7555b198-ffe8-5d42-8264-458d0ba89553.json  87f2973c-62f2-5658-a9e1-73c9cbba7887.json  893eee3e-2dc3-5f77-a252-b81b536382d1.json  922f36ee-0758-55e5-bccc-861738849702.json  9630122d-abf0-5887-b728-3ea716492df8.json  ad1691b3-59a3-565f-8bd4-09a7b54ee25e.json  b8508397-3466-52f6-9288-d04b6d7865c0.json  c3509ab9-f1fd-5938-a968-d92251c8c434.json  ced7ab6a-d76a-559e-b3f1-3c079ada13ef.json  d425512e-5f0c-5bc5-88f0-50c6ab20afc1.json  ef812fbd-3fae-5750-b157-7f3befd7ecd1.json  f20f1ce9-b28a-53ed-8f6c-4eedff168be0.json
exports/users/: 1d62483f-baa2-5943-82e0-d21a0eae5f2a.json  343178e3-51e8-5136-9caa-38f11cea14c5.json  3d3c6e3e-8844-56f0-85cd-abb588282bf1.json  8a7776de-76d1-58b9-8ed2-b0abd20f320b.json  989c7156-f91b-5d58-bf01-633eb63cd6d0.json  9982d8aa-2eba-5192-8270-0df06c1067f7.json  Frodo.json  Gandalf.json  Jaina Proudmoore.json  MaxDaten.json  Sauron.json  Thrall.json  c5315a9b-5f2a-57aa-b4d4-4f50f9c8361f.json
messages/: de.msg
samples/: .product.json  README.md  product.json  sample01.json  sample03.json
samples/assocs/: assoc01.json  assoc02.json
samples/products/: .product.json  sample01.json  sample02.json  sample03.json  sample04.json  sample05.json  sample06.json
src/Ecom/: Application.hs  Forms.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs  Utils.hs
src/Ecom/Handler/: Admin.hs  Auth.hs  Catalog.hs  Home.hs  Manage.hs  Product.hs  ProductAssoc.hs
src/Ecom/Settings/: Development.hs  StaticFiles.hs
static/css/: bootstrap.css  bootstrap.min.css
static/js/: bootstrap.js  bootstrap.min.js
static/js/lib/: recommendations.js
templates/: admin-products.hamlet  admin-users.hamlet  catalog.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  header.hamlet  homepage.hamlet  homepage.lucius  manage-assocs.hamlet  manage-products.hamlet  manage-users.hamlet  product-catalog.hamlet  product.hamlet  product.julius  product.lucius  productAssoc.hamlet  productAssoc.lucius  rec-products.hamlet  rec-products.julius  rec-products.lucius  recommended-products.hamlet  recommended-products.julius  table.julius  table.lucius  user.hamlet  user.lucius
templates/admin/: assocs.hamlet  products.hamlet  users.hamlet
tests/: ModelTest.hs  TestImport.hs  main.hs
tests/fixures/: product.json  user.json
tools/: StateManager.hs
