name:              ecom
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

----------------------------------------------------------------------------------------------------

library
    hs-source-dirs:    src
    exposed-modules: Ecom.Application
                     Ecom.Foundation
                     Ecom.Import
                     Ecom.Settings
                     Ecom.Settings.StaticFiles
                     Ecom.Settings.Development
                     Ecom.Model
    other-modules:   Ecom.Utils
                     Ecom.Handler.Home
                     Ecom.Handler.Catalog
                     Ecom.Handler.ProductAssoc
                     Ecom.Handler.Admin
                     Ecom.Handler.Auth

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4

                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , blaze-html                    == 0.6.*
                 , colour                        == 2.3.*
                 , uuid                          == 1.2.*

                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , mtl                           == 2.1.*
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.9        && < 1.10
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , data-default

                 , acid-state                    == 0.8.*
                 , aeson                         == 0.6.*
                 , aeson-pretty                  >= 0.7
                 , safecopy                      == 0.8.*
                 , ixset                         == 1.0.*
                 , containers
                 , vector                        == 0.10.*
                 , split                         == 0.2.*

                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 0.3

                 , ghc-prim
                 , template-haskell

----------------------------------------------------------------------------------------------------

executable         ecom
    if flag(library-only)
        Buildable: False

    main-is:           Main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , ecom
                     , yesod

    ghc-options:       -threaded -O2

----------------------------------------------------------------------------------------------------

executable         state-manager
    if flag(library-only)
        Buildable: False

    main-is:           StateManager.hs
    hs-source-dirs:    tools
    build-depends:     base
                     , ecom
                     , yesod
                     , directory
                     , filepath                 == 1.3.*
                     , cmdargs                  == 0.10.*
                     , acid-state               == 0.8.*
                     , bytestring               >= 0.9        && < 0.11
                     , aeson                    == 0.6.*
                     , uuid                     == 1.2.*

    ghc-options:       -threaded -O2

----------------------------------------------------------------------------------------------------

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , ecom
                 , filepath

                 , yesod-test               >= 1.2 && < 1.3
                 , yesod-core
                 , yesod

                 , hspec
                 , mtl                      == 2.1.*

                 , bytestring               >= 0.9        && < 0.11
                 , containers
                 , colour                   == 2.3.*
                 , aeson                    == 0.6.*
                 , uuid                     == 1.2.*
